[package]
name = "rotor-cantal"
description = """
    The cantal client library (on top of rotor main loop)
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["mio", "cantal", "rotor", "metrics"]
homepage = "http://github.com/tailhook/rotor-cantal"
documentation = "http://tailhook.github.io/rotor-cantal"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
rotor = "0.6.2"
rotor-http = "0.7.0"
rotor-tools = "0.3.1"
argparse = "0.2.1"
time = "0.1.31"
rustc-serialize = "0.3.18"
log = "0.3.5"
probor = "0.2.0"
cbor-codec = "0.5.0"

[dev-dependencies]
env_logger = "0.3.3"

[lib]
name = "rotor_cantal"

[[bin]]
name = "cantal-cli"
path = "src/bin/main.rs"
